first submit button works

--- a/afresh/application/templates/layout.html
+++ b/afresh/application/templates/layout.html
@@ -10,7 +10,7 @@
     <div class="header">
         <h1> Nonsense Academic Database</h1>
         <div id = "links">
-            <a href="{{ url_for('index') }}">Home</a>}
+            <a href="{{ url_for('index') }}">Home</a>
             <a href="{{ url_for('update_academic') }}">Update an Academic's Details</a>
             <a href="{{ url_for('update_paper') }}">Update a Papers Details</a>
             <a href="{{ url_for('add_academic') }}">Add an Academic</a>
