--- a/afresh/application/templates/index.html
+++ b/afresh/application/templates/index.html
@@ -3,7 +3,7 @@
 {% block body %}
 <h2>Search of Academic</h2>
     <div class = 'form'>
-        <form method="GET" action="">
+        <form method="POST" action="">
             <!-- {{ form.hidden_tag() }} -->
             {{ form.name.label }} {{ form.name }}
             <br>
@@ -13,11 +13,11 @@
     </div>
 <h2>Search for Paper</h2>
 <div class="form">
-    <form method="GET" action="">
+    <form method="POST" action="">
         <!-- {{ form.hidden_tag() }} -->
         {{ form.title.label }} {{ form.title }}
         <br>
-        <p></p>
+        <br>
         {{ form.submit }}
     </form>
 </div>
@@ -26,13 +26,21 @@
     <p>Total Number of Academics: {{total_number['number_of_academics']}}<p> 
     <br>
     <p>Total Number of Papers: {{total_number['number_of_papers']}}<p>
-        <br>
+    <br>
 
-    {% if search_term %}
-    <h1>Search Result</h1>
-        {% for result in search_term %}
-    <p>name: {{result.name}}, Institution: {{result.current_institution}}, Field of Study: {{result.field_of_study}}
-        {% endfor %}
+    {% if academics_result %}
+        <h1>Academic's Details</h1>
+        <br>
+        <p>Name: {{academics_result.name}}, Institution: {{academics_result.current_institution}}, Field of Study: {{academics_result.field_of_study}}
+        <!-- list of papers written by academic go here         -->
+    <div>
+        <h1> Paper Details </h1>
+        <br>
+        <p>Title: {{ papers_result.title }} Year Published: {{ papers_result.year_published }} Field of Study: {{ papers_result.field_of_study }}</p>
+    </div>
     {% endif %}
+    
+    <p>
+
 </div>
 {% endblock body %}
