--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -1,6 +1,8 @@
 {% extends 'layout.html'%}
 
 {% block body %}
+<h1>Search Page</h1>
+<br>
 <h2>Search for Academic</h2>
     <div class = 'form'>
         <form method="POST" action="">
