--- a/application/templates/update_academic.html
+++ b/application/templates/update_academic.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html'%}
 
 {% block body %}
-<h1>Update Page</h1>
+<h1>Update Academic Page</h1>
 <br>
 {% if init %}
     <h2>Choose Academic to Amend</h2>
