--- a/application/templates/add_academic.html
+++ b/application/templates/add_academic.html
@@ -1,8 +1,10 @@
 {% extends 'layout.html'%}
 {% block body %}
 {% if form %}
-<h2>Add an Academic</h2>
+<h1>Add an Academic</h1>
 <form method = 'POST'>
+<br>
+<h2>Add academic's details</h2>
 <br>
 {{ form.name.label }} {{ form.name }}
 <br>
