--- a/application/templates/update_paper.html
+++ b/application/templates/update_paper.html
@@ -18,10 +18,21 @@
         {{ form.field_of_study.label }} {{ form.field_of_study }} 
         <br>
         <p></p>
+        <h3>Updating the paper will delete all existing authors, please resubmit a new list of authors, including any existing authors you want to keep</h3>
+        {{ form.no_of_authors.label }} {{ form.no_of_authors }}
+        <br>
+        <p></p>
+        {{ form.author1.label }} {{ form.author1 }} {{ form.author2 }} {{ form.author3}} {{form.author4}}
+        <br>
+        <p></p>
         {{ form.submit }}
     </form>
 {% endif %}
 {% if pap %}
-<h2> Paper Updated: {{ pap.title }}, {{ pap.year_published }},  {{ pap.field_of_study }}</h2>
+<h3> Paper Updated: {{ pap.title }}, {{ pap.year_published }},  {{ pap.field_of_study }}</h3>
+<h3>Authors:</h3>
+{% for a in authors %}
+<p>{{ a.name }}</p>
+{% endfor %}
 {% endif %}
 {% endblock body %}
