--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -24,7 +24,7 @@
         {% block body %}
         {% endblock body %}
     </div>
-    <div id="footer" style="position: fixed; bottom:0%">
+    <div id="footer" style="position: fixed; bottom:0%; right:5%">
         <p>Michael Corcoran</p>
     </div>
 </body>
