get tests completed, need to add tests for if statements on add_paper and update_paper to increase coverage

--- a/application/templates/del_paper.html
+++ b/application/templates/del_paper.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 {% if form %}
-<h2>Add an Paper</h2>
+<h2>Delete a Paper</h2>
 <form method = 'POST'>
 <br>
 {{ form.title.label }} {{ form.title }}
