--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Academic Paper Index Page</title>
+    <title>Nonsense Academic Paper WebApp</title>
 </head>
 <body>
     <div class="header">
