added a couple of details to html forms to explain function of fields

--- a/application/templates/update_academic.html
+++ b/application/templates/update_academic.html
@@ -12,10 +12,10 @@
         {{ form.name.label }} {{ form.name}}
         <br>
         <p></p>
-        {{ form.current_institution.label }} {{ form.current_institution }}
+        {{ form.current_institution.label }} {{ form.current_institution }} <i>     Institute will not be changed if field left empty</i>
         <br>
         <p></p>
-        {{ form.field_of_study.label }} {{ form.field_of_study }} 
+        {{ form.field_of_study.label }} {{ form.field_of_study }} <i>     Field of Study will not be changed if field left empty</i>
         <br>
         <p></p>
         {{ form.submit }}
