--- a/application/templates/update_paper.html
+++ b/application/templates/update_paper.html
@@ -12,10 +12,10 @@
         {{ form.title.label }} {{ form.title}}
         <br>
         <p></p>
-        {{ form.year_published.label }} {{ form.year_published }}
+        {{ form.year_published.label }} {{ form.year_published }} 
         <br>
         <p></p>
-        {{ form.field_of_study.label }} {{ form.field_of_study }} 
+        {{ form.field_of_study.label }} {{ form.field_of_study }} <i>Field of Study will not be changed if field left blank</i>
         <br>
         <p></p>
         <h3>Updating the paper will delete all existing authors, please resubmit a new list of authors, including any existing authors you want to keep</h3>
