trying again with envvar

--- a/application/templates/add_academic.html
+++ b/application/templates/add_academic.html
@@ -3,6 +3,7 @@
 {% if form %}
 <h1>Add an Academic</h1>
 <form method = 'POST'>
+{{ form.hidden_tag() }}
 <br>
 <h2>Add academic's details</h2>
 <br>
