--- a/application/templates/del_academic.html
+++ b/application/templates/del_academic.html
@@ -4,6 +4,7 @@
 <h2>Delete an Academic</h2>
 <h3>Pick Academic to delete</h3>
 <form method = 'POST'>
+{{ form.hidden_tag() }}
 <br>
 {{ form.name.label }} {{ form.name }}
 <br>
