--- a/application/templates/del_paper.html
+++ b/application/templates/del_paper.html
@@ -4,6 +4,7 @@
 {% if form %}
 <h2>Delete a Paper</h2>
 <form method = 'POST'>
+{{ form.hidden_tag() }}
 <br>
 {{ form.title.label }} {{ form.title }}
 <br>
