--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -6,6 +6,7 @@
 <h2>Search for Academic</h2>
     <div class = 'form'>
         <form method="POST" action="">
+            {{ form.hidden_tag() }}
             <!-- {{ form.hidden_tag() }} -->
             {{ form.name.label }} {{ form.name }}
             <br>
