--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -7,9 +7,9 @@
     <title>Nonsense Academic Paper WebApp</title>
 </head>
 <body>
-    <div class="header">
-        <h1> Nonsense Academic Database</h1>
-        <div id = "links" style="text-align: center; display: flex; justify-content: space-around">
+    <div class="header" style="background-color:black">
+        <h1 style="color:white"> Nonsense Academic Database</h1>
+        <div id = "links" style="text-align: center; display: flex; justify-content: space-around; color:white">
             <a href="{{ url_for('index') }}">Home</a>
             <a href="{{ url_for('update_academic') }}">Update an Academic's Details</a>
             <a href="{{ url_for('update_paper') }}">Update a Papers Details</a>
