--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -12,7 +12,7 @@
 </style>
 <body style="font-family: Source Sans Pro, sans-serif">
     <div class="header" style="background-color:#282624; width:100%; margin: 0 auto">
-        <h1 style="color:white; font-size:50px"> Nonsense Academic Database</h1>
+        <div style="display:flex"><img src='../../images/books_icon'; alt='book icon' style="height:50px"> <h1 style="color:white; font-size:50px"> Nonsense Academic Database</h1></div>
         <div id = "links" style="text-align: center; display: flex; justify-content: space-around; color:white">
             <a href="{{ url_for('index') }}"  style='color:white'>Home</a>
             <a href="{{ url_for('update_academic') }}">Update an Academic's Details</a>
