updated styles on layout

--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -28,8 +28,6 @@
         {% block body %}
         {% endblock body %}
     </div>
-    <div id="footer" style="background-color:#282624; position: fixed; bottom:0%; height:50px; width: 100%">
-        <p style="color:white; position: fixed; bottom:0%; right:5%;">Michael Corcoran</p>
-    </div>
+        <p style="position: fixed; bottom:0%; right:5%;">Michael Corcoran</p>
 </body>
 </html>
