--- a/application/templates/update_academic.html
+++ b/application/templates/update_academic.html
@@ -1,10 +1,11 @@
 {% extends 'layout.html'%}
 
 {% block body %}
-<h1>Update Academic</h1>
-<br>
-{% if init %}
-    <div style="padding-left:20px; display:flex">
+<div style="padding-left:20px"></div>
+    <h1>Update Academic</h1>
+    <br>
+    {% if init %}
+    
         <h2>Choose Academic to Amend</h2>
         <form method = 'POST', action = ''>
             {{ form.hidden_tag() }}
@@ -20,11 +21,11 @@
             {{ form.field_of_study.label }} {{ form.field_of_study }} <i>     Field of Study will not be changed if field left empty</i>
             <br>
             <p></p>
-            {{ form.submit }}
-        </form>
-    </div>
-{% endif %}
-{% if acad %}
-<h2>Academic Updated: {{ acad.name }}, {{ acad.current_institution }}, {{ acad.field_of_study }}</h1>
-{% endif %}
+            <p align=right>{{ form.submit }}</p>
+        </form>    
+    {% endif %}
+    {% if acad %}
+        <h2>Academic Updated: {{ acad.name }}, {{ acad.current_institution }}, {{ acad.field_of_study }}</h1>
+    {% endif %}
+</div>
 {% endblock body %}
