--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -3,7 +3,7 @@
 {% block body %}
 <div style="padding-left:20px">
     <h1>Search Page</h1>
-    <div style="display:flex">
+    <div style="display:flex; justify-content: space-around;">
         <div>
             <h2>Search for Academic</h2>
             <div class = 'form'>
