--- a/application/templates/add_paper.html
+++ b/application/templates/add_paper.html
@@ -1,38 +1,40 @@
 {% extends 'layout.html'%}
 
 {% block body %}
-{% if form %}
-<h1>Add a Paper</h1>
-<form method = 'POST'>
-{{ form.hidden_tag() }}
-<br>
-<h2> Add paper's details</h2>
-<br>
-{{ form.title.label }} {{ form.title }}
-<br>
-<p></p>
-{{ form.year_published.label }} {{ form.year_published }}
-<br>
-<p></p>
-{{ form.field_of_study.label }} {{ form.field_of_study }}
-<br>
-<p></p>
-{{ form.no_of_authors.label }} {{ form.no_of_authors }}
-<br>
-<p></p>
-{{ form.authors1.label }} {{ form.authors1 }} {{ form.authors2 }} {{ form.authors3}} {{form.authors4}}
-<br>
-<p></p>
-{{ form.submit }}
-</form>
-{% endif %}
-{% if paper %}
-<h2>Paper created</h2>
-<p><b>Title:</b> {{paper.title}} <b>Year Published:</b> {{ paper.year_published }} Field of Study: {{ paper.field_of_study }}</p><br>
-<p>Authors:</p>
-{% for a in academic_authors %}
-{{ a.name }}
-<p></p>
-{% endfor %}
-{% endif %}
+<div style="padding-left:40px">
+    {% if form %}
+        <h1>Add a Paper</h1>
+        <form method = 'POST'>
+        {{ form.hidden_tag() }}
+        <br>
+        <h2> Add paper's details</h2>
+        <br>
+        {{ form.title.label }} {{ form.title }}
+        <br>
+        <p></p>
+        {{ form.year_published.label }} {{ form.year_published }}
+        <br>
+        <p></p>
+        {{ form.field_of_study.label }} {{ form.field_of_study }}
+        <br>
+        <p></p>
+        {{ form.no_of_authors.label }} {{ form.no_of_authors }}
+        <br>
+        <p></p>
+        {{ form.authors1.label }} {{ form.authors1 }} {{ form.authors2 }} {{ form.authors3}} {{form.authors4}}
+        <br>
+        <p></p>
+        {{ form.submit }}
+        </form>
+    {% endif %}
+    {% if paper %}
+        <h2>Paper created</h2>
+        <p><b>Title:</b> {{paper.title}} <b>Year Published:</b> {{ paper.year_published }} Field of Study: {{ paper.field_of_study }}</p><br>
+        <p>Authors:</p>
+        {% for a in academic_authors %}
+            {{ a.name }}
+            <p></p>
+        {% endfor %}
+    {% endif %}
+</div>
 {% endblock body %}
