--- a/application/templates/del_academic.html
+++ b/application/templates/del_academic.html
@@ -1,18 +1,20 @@
 {% extends 'layout.html'%}
 {% block body %}
-{% if form %}
-<h2>Delete an Academic</h2>
-<h3>Pick Academic to delete</h3>
-<form method = 'POST'>
-{{ form.hidden_tag() }}
-<br>
-{{ form.name.label }} {{ form.name }}
-<br>
-<p></p>
-{{ form.submit }}
-</form>
-{% endif %}
-{% if deleted %}
-<h2>Academic Deleted</h2>
-{% endif %}
+<div style="padding-left:40px">
+    {% if form %}
+        <h2>Delete an Academic</h2>
+        <h3>Pick Academic to delete</h3>
+        <form method = 'POST'>
+        {{ form.hidden_tag() }}
+        <br>
+        {{ form.name.label }} {{ form.name }}
+        <br>
+        <p></p>
+        {{ form.submit }}
+        </form>
+    {% endif %}
+    {% if deleted %}
+        <h2>Academic Deleted</h2>
+    {% endif %}
+</div>
 {% endblock body %}
