--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -3,7 +3,7 @@
 {% block body %}
 <div style="padding-left:20px">
     <h1>Search Page</h1>
-    <div style="display:flex; justify-content: space-around;">
+    <div style="display:flex; justify-content: start;">
         <div>
             <h2>Search for Academic</h2>
             <div class = 'form'>
@@ -16,7 +16,7 @@
                 </form>
             </div>
         </div>
-        <div style="padding-left:100px">
+        <div style="margin-left:100px">
             <h2>Search for Paper</h2>
             <div class="form">
                 <form method="POST" action="">
