updated styles on HTML

--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -27,8 +27,9 @@
                 </form>
             </div>
         </div>
-            <div align="right"; style='padding-right:50px'>
-            <   p><b>Total Number of Academics:</b> {{total_number['number_of_academics']}}<p> 
+            <div style='margin-left:300px'>
+                <p></p>
+                <p><b>Total Number of Academics:</b> {{total_number['number_of_academics']}}<p> 
                 <p><b>Total Number of Papers:</b> {{total_number['number_of_papers']}}<p>
             </div>
     </div>
