--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -10,7 +10,7 @@
 <style>
     a {color:white}
 </style>
-<body style="font-family: Source Sans Pro, sans-serif; background-image: url('../static/background.jpg')">
+<body style="font-family: Source Sans Pro, sans-serif; background-image: url('../static/background2.jpg')">
     <div class="header" style="background-color:#282624; width:100%; margin: 0 auto">
         <div style="display:flex"><img src="{{url_for('static', filename='books_icon.png')}}" height='100px' style='margin: 3px'/> <h1 style="color:white; font-size:50px; margin-left: 10px"> Nonsense Academic Database</h1></div>
         <div id = "links" style="text-align: center; display: flex; justify-content: space-around; color:white; padding-bottom: 10px; padding-left: 20px">
