--- a/application/templates/del_academic.html
+++ b/application/templates/del_academic.html
@@ -16,9 +16,9 @@
     {% if deleted %}
         <h2>Academic Deleted</h2>
     {% endif %}
-    {% if last_author %}
+    {% if paper_with_one_author %}
     <h2>Academic Not Deleted</h2>
-    <p>'Can\'t delete Academic it will leave a paper without an author please delete {{ last_author.title }} first'</p>
+    <p>'Can't delete Academic it will leave a paper without an author please delete {{ last_author.title }} first'</p>
 {% endif %}
 </div>
 {% endblock body %}
