--- a/application/templates/del_academic.html
+++ b/application/templates/del_academic.html
@@ -18,7 +18,7 @@
     {% endif %}
     {% if paper_with_one_author %}
     <h2>Academic Not Deleted</h2>
-    <p>'Can't delete Academic it will leave a paper without an author please delete {{ paper_with_one_author.title }} first'</p>
+    <p>'Can't delete Academic it will leave a paper without an author please delete <b>{{ paper_with_one_author.title }}</b> first'</p>
 {% endif %}
 </div>
 {% endblock body %}
